# ipa-keyboard

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md
companion-app/: index.html  package-lock.json  package.json  vite.config.ts
companion-app/src-tauri/: Cargo.toml  Entitlements.plist  PrivacyInfo.xcprivacy  tauri.conf.json
companion-app/src-tauri/IMEBundle/IPAKeyboard.app/Contents/: Info.plist
companion-app/src-tauri/IMEBundle/IPAKeyboard.app/Contents/MacOS/: IPAKeyboard
companion-app/src-tauri/IMEBundle/IPAKeyboard.app/Contents/Resources/: default-mappings.json
companion-app/src-tauri/IMEBundle/IPAKeyboard.app/Contents/_CodeSignature/: CodeResources
companion-app/src-tauri/binaries/: ipa-keyboard-daemon-aarch64-apple-darwin  ipa-keyboard-daemon-universal-apple-darwin  ipa-keyboard-daemon-x86_64-apple-darwin
companion-app/src-tauri/capabilities/: default.json
companion-app/src-tauri/icons/: icon.icns
companion-app/src-tauri/src/: lib.rs  main.rs
docs/: DEVELOPER.md  DISTRIBUTION.md  MAC-APP-STORE-GUIDE.md  PHASE-MAC-SIGNING.md  USER_GUIDE.md  _config.yml  index.md  logo-philosophy.md  privacy.md  support.md
ime-core/macos/: Cargo.toml  build.rs
ime-core/macos/Resources/: IPAKeyboard.entitlements  Info.plist
ime-core/macos/src/: event_tap.rs  injector.rs  lib.rs  main.rs
ime-core/macos/tests/: integration_test.rs
ime-core/windows/: Cargo.toml  register.ps1
ime-core/windows/src/: composition.rs  config_reader.rs  key_handler.rs  lib.rs  register.rs  text_input_processor.rs
ios/: PLAN.md  project.yml
scripts/: build-daemon.sh  build-release.sh  build-universal.sh  build-windows.ps1  bundle-ime.sh  e2e-test.py  generate-app-icon.py  notarize-macos.sh  (+1 more)
(+105 files in other folders)
