[package]
name = "ipa-keyboard-daemon"
version = "0.1.1"
edition = "2021"
description = "System-wide IPA input via CGEvent tap (macOS)"

[lib]
name = "ipa_keyboard_daemon"
path = "src/lib.rs"

[[bin]]
name = "ipa-keyboard-daemon"
path = "src/main.rs"

[dependencies]
ipa-mapping-engine = { path = "../shared" }
serde_json = "1"
core-graphics = "0.24"
core-foundation = "0.10"
foreign-types-shared = "0.3"
